secret name change

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.tf.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.tf.j2
@@ -282,7 +282,7 @@ locals {
           id                   = "${var.s3bucket_name_prefix_mvi}-mvi"
           access_level         = "ro"
           s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_mvi}-mvi"
-          secret_suffix        = "mvi_logging/cos-logging"
+          secret_suffix        = "manage_attachments/cos-attachments"
           cos_secret_format    = false
           manage_secret_format = true
           expiration           = null
