[patch] Add support for adoption metrics reporting flag in cli (#1854)
Co-authored-by: Lokesh <110647904+lokesh-sreedhara@users.noreply.github.com>

--- a/tekton/src/params/install.yml.j2
+++ b/tekton/src/params/install.yml.j2
@@ -433,6 +433,18 @@
 - name: mas_icr_cpopen
   type: string
   default: ""
+- name: mas_feature_usage
+  type: string
+  description: Flag to control feature adoption metrics used to understand feature usage and improve the product
+  default: "True"
+- name: mas_usability_metrics
+  type: string
+  description: Flag to control user interface interaction metrics to improve usability
+  default: "True"
+- name: mas_deployment_progression
+  type: string
+  description: Flag to control metrics used to understand progression of tasks and workflows within the product
+  default: "True"
 - name: mas_annotations
   type: string
   default: ""
