--- a/tekton/src/pipelines/gitops/gitops-mas-cluster.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-cluster.yml.j2
@@ -429,7 +429,7 @@ spec:
       when:
         - input: "$(params.role_arn)"
           operator: notin
-          values: ["rosa"]
+          values: [""]
       workspaces:
         - name: configs
           workspace: configs
