--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/db2-databases/ibm-dbs-rds-databases.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/db2-databases/ibm-dbs-rds-databases.yaml.j2
@@ -3,7 +3,7 @@ mas_application_id: {{ MAS_APP_ID }}
 db2_instance_name: {{ DB2_INSTANCE_NAME }}
 host: <path:{{ SECRETS_PATH }}:{{ HOST }}>
 port: <path:{{ SECRETS_PATH }}:{{ PORT }}>
-db2_dbname: <path:{{ SECRETS_PATH }}:{{ DB2_NAME }}>
+db2_dbname: <path:{{ SECRETS_PATH }}:{{ DB2_DBNAME }}>
 rds_admin_db_name: <path:{{ SECRETS_PATH }}:{{ RDS_ADMIN_DB_NAME }}>
 user: <path:{{ SECRETS_PATH }}:{{ USER_NAME }}>
 password: <path:{{ SECRETS_PATH }}:{{ PASSWORD }}> # pragma: allowlist secret
