[minor] update to allow gitops admin modes

--- a/image/cli/mascli/templates/gitops/bootstrap/root-application.yaml.j2
+++ b/image/cli/mascli/templates/gitops/bootstrap/root-application.yaml.j2
@@ -30,6 +30,9 @@ spec:
 
         auto_delete: {{ true if AUTO_DELETE=="true" else false }}
 
+        cluster_admin_role: true
+        application_admin_role: true
+
   syncPolicy:
     automated:
       prune: true
