[patch] add additional opt out flags

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-suite.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-suite.yaml.j2
@@ -4,7 +4,9 @@ ibm_mas_suite:
   cert_manager_namespace: "{{ CERT_MANAGER_NAMESPACE }}"
   ibm_entitlement_key: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_IBM_ENTITLEMENT }}>"
   domain: "{{ DOMAIN }}"
-  mas_report_adoption_metrics: "{{ MAS_REPORT_ADOPTION_METRICS }}"
+  mas_feature_use: "{{ MAS_FEATURE_USE }}"
+  mas_deployment_progression: "{{ MAS_DEPLOYMENT_PROGRESSION }}"
+  mas_usability: "{{ MAS_USABILITY }}"
 
 {%- if DNS_PROVIDER is defined and DNS_PROVIDER !='' %}
   # suite dns
