--- a/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
@@ -170,7 +170,13 @@ spec:
     - name: mas_wipe_mongo_data
       type: string
       default: "false"
-    - name: mas_report_adoption_metrics
+    - name: mas_feature_use
+      type: string
+      default: "true"
+    - name: mas_deployment_progression
+      type: string
+      default: "true"
+    - name: mas_usability
       type: string
       default: "true"
     - name: mas_pod_template_yaml
@@ -457,8 +463,12 @@ spec:
           value: $(params.mas_pod_template_yaml)
         - name: mas_wipe_mongo_data
           value: $(params.mas_wipe_mongo_data)
-        - name: mas_report_adoption_metrics
-          value: $(params.mas_report_adoption_metrics)
+        - name: mas_feature_use
+          value: $(params.mas_feature_use)
+        - name: mas_deployment_progression
+          value: $(params.mas_deployment_progression)
+        - name: mas_usability
+          value: $(params.mas_usability)
         - name: suite_spec_additional_properties_yaml
           value: $(params.suite_spec_additional_properties_yaml)
         - name: suite_spec_settings_additional_properties_yaml
