--- a/tekton/src/pipelines/mas-ivt-manage.yml.j2
+++ b/tekton/src/pipelines/mas-ivt-manage.yml.j2
@@ -53,6 +53,9 @@ spec:
     - name: fvt_digest_ctf
       type: string
       default: ""
+    - name: fvt_digest_monitor
+      type: string
+      default: ""
 
     - name: fvt_test_suite
       type: string
@@ -95,7 +98,7 @@ spec:
         - name: fvt_image_digest_manage
           value: $(params.fvt_digest_manage)
         - name: fvt_image_digest_monitor
-          value: $(params.fvt_digest_ctf)
+          value: $(params.fvt_digest_monitor)
         - name: product_channel_manage
           value: $(params.mas_app_channel_manage)
         - name: product_channel_monitor
