--- a/tekton/src/tasks/ivt/ivt-manage.yml.j2
+++ b/tekton/src/tasks/ivt/ivt-manage.yml.j2
@@ -35,7 +35,7 @@ spec:
       description: Manage FVT Container Image Digest (fvt-ibm-mas-manage)
     - name: fvt_image_digest_monitor
       type: string
-      description: Monitor FVT Container Image Digest (common-test-framewor)
+      description: Monitor FVT Container Image Digest (fvt-ibm-mas-monitor)
 
     # Manage Specific information
     # -------------------------------------------------------------------------
