added hypervisor in ibm-mas-cluster-base.yaml.j2

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/phase1/ibm-mas-cluster-base.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/phase1/ibm-mas-cluster-base.yaml.j2
@@ -2,6 +2,9 @@ merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}"
 
 account:
   id: {{ ACCOUNT_ID }}
+{% if HYPERVISOR is defined and HYPERVISOR %}
+  hypervisor: {{ HYPERVISOR }}
+{% endif %}
 
 region:
   id: {{ REGION_ID }}
