--- a/tekton/src/pipelines/mas-backup.yml.j2
+++ b/tekton/src/pipelines/mas-backup.yml.j2
@@ -311,6 +311,8 @@ spec:
 
         - name: backup_version
           value: $(params.backup_version)
+        - name: mas_instance_id
+          value: $(params.mas_instance_id)
 
         # S3 parameters
         - name: aws_access_key_id
