--- a/tekton/src/pipelines/mas-restore.yml.j2
+++ b/tekton/src/pipelines/mas-restore.yml.j2
@@ -74,6 +74,8 @@ spec:
           value: download-backup-archive
         - name: backup_archive_name
           value: $(params.backup_archive_name)
+        - name: mas_instance_id
+          value: $(params.mas_instance_id)
 
         # S3 parameters
         - name: aws_access_key_id
