--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/phase1/ibm-mas-cluster-base.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/phase1/ibm-mas-cluster-base.yaml.j2
@@ -2,7 +2,7 @@ merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}"
 
 account:
   id: {{ ACCOUNT_ID }}
-{% if HYPERVISOR is defined and HYPERVISOR %}
+{% if HYPERVISOR is defined and HYPERVISOR !='' %}
   hypervisor: {{ HYPERVISOR }}
 {% endif %}
 
