--- a/tekton/src/tasks/gitops/gitops-cluster.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-cluster.yml.j2
@@ -329,7 +329,8 @@ spec:
         --github-org  $GITHUB_ORG \
         --github-repo $GITHUB_REPO \
         --git-branch $GIT_BRANCH \
-        --secrets-path $SECRET_PATH
+        --secrets-path $SECRET_PATH \
+        --hypervisor $HYPERVISOR
 
         exit $?
       command:
