--- a/tekton/src/pipelines/mas-restore.yml.j2
+++ b/tekton/src/pipelines/mas-restore.yml.j2
@@ -35,6 +35,8 @@ spec:
     # 9. Install DRO (if required)
     # 10. Restore MAS Suite
     # 11. Post Restore Suite Verify
+    # 12. Restore DB2 (if required)
+    # 13. Restore Manage (if required)
 
     # 1. Pipeline Start
     # -------------------------------------------------------------------------
@@ -364,6 +366,88 @@ spec:
         - input: "$(params.mas_instance_id)"
           operator: notin
           values: [""]
+
+    # 12. Restore Manage Database (Db2) - Optional
+    # -------------------------------------------------------------------------
+    - name: manage-db2-restore
+      timeout: "0"
+      when:
+        - input: "$(params.restore_manage_db)"
+          operator: in
+          values: ["true", "True"]
+      params:
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(8) }}
+
+        - name: db2_action
+          value: restore
+
+        # restore specific parameters
+        - name: db2_backup_version
+          value: $(params.restore_version)
+        - name: backup_vendor
+          value: $(params.manage_db2_restore_vendor)
+        - name: override_storageclass
+          value: $(params.manage_db2_restore_storageclass)
+        - name: db2_meta_storage_class
+          value: $(params.manage_db_meta_storage_class)
+        - name: db2_data_storage_class
+          value: $(params.manage_db_data_storage_class)
+        - name: db2_backup_storage_class
+          value: $(params.manage_db_backup_storage_class)
+        - name: db2_logs_storage_class
+          value: $(params.manage_db_logs_storage_class)
+        - name: db2_temp_storage_class
+          value: $(params.manage_db_temp_storage_class)
+
+      taskRef:
+        kind: Task
+        name: mas-devops-db2
+      workspaces:
+        - name: configs
+          workspace: shared-configs
+        - name: backups
+          workspace: shared-backups
+      runAfter:
+        - cert-manager
+
+    # 13. Restore Manage Application - Optional
+    # -------------------------------------------------------------------------
+    - name: manage-app-restore
+      timeout: "0"
+      when:
+        - input: "$(params.restore_manage_app)"
+          operator: in
+          values: ["true", "True"]
+      params:
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(8) }}
+
+        - name: mas_instance_id
+          value: $(params.mas_instance_id)
+        - name: mas_app_id
+          value: manage
+
+        - name: mas_backup_dir
+          value: /workspace/backups
+        - name: mas_app_backup_version
+          value: $(params.restore_version)
+        
+        - name: override_storageclass
+          value: $(params.manage_app_override_storageclass)
+        - name: manage_custom_storage_class_rwx
+          value: $(params.manage_app_storage_class_rwx)
+        - name: manage_custom_storage_class_rwo
+          value: $(params.manage_app_storage_class_rwo)
+
+      taskRef:
+        kind: Task
+        name: mas-devops-suite-app-restore
+      workspaces:
+        - name: configs
+          workspace: shared-configs
+        - name: backups
+          workspace: shared-backups
+      runAfter:
+        - suite-backup
 
   finally:
     # 1. Clean Backup Workspaces (Optional)
