[patch] Migrate Monitor FVT to dedicated container image

--- a/image/cli/masfvt/templates/mas-fvt-monitor.yml.j2
+++ b/image/cli/masfvt/templates/mas-fvt-monitor.yml.j2
@@ -35,8 +35,8 @@ spec:
     - name: fvt_artifactory_token
       value: "{{ fvt_artifactory_token }}"
     # Digests
-    - name: fvt_digest_ctf
-      value: "{{ fvt_digest_ctf }}"
+    - name: fvt_digest_monitor
+      value: "{{ fvt_digest_monitor }}"
     - name: ivt_digest_core
       value: "{{ ivt_digest_core }}"
     - name: fvt_digest_data_dictionary
