modified dr region related changes

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.tf.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.tf.j2
@@ -242,7 +242,7 @@ locals {
           cos_secret_format    = false
           manage_secret_format = true
           expiration           = null
-          dr_replicate         = false
+          dr_replicate         = var.enable_dr
         },
         custfiles = {
           name_prefix          = var.name_prefix
@@ -257,7 +257,7 @@ locals {
           expiration = {
             days = 366 // how long to keep logs
           }
-          dr_replicate         = false
+          dr_replicate         = var.enable_dr
         },
         logs_ro = {
           name_prefix          = var.name_prefix
@@ -270,7 +270,7 @@ locals {
           cos_secret_format    = false
           manage_secret_format = true
           expiration           = null
-          dr_replicate         = false
+          dr_replicate         = var.enable_dr
         }
       }
     #Manage specific S3 buckets ends
@@ -289,7 +289,7 @@ locals {
           cos_secret_format    = true
           manage_secret_format = false
           expiration           = null
-          dr_replicate         = false
+          dr_replicate         = var.enable_dr
         }
       }
     #MVI specific S3 buckets ends
