--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.tf.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.tf.j2
@@ -285,7 +285,7 @@ locals {
           id                   = "${var.s3bucket_name_prefix_mvi}-mvi"
           access_level         = "ro"
           s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_mvi}-mvi"
-          secret_suffix        = "mvi_attachments/cos-attachments"
+          secret_suffix        = "cos"
           cos_secret_format    = true
           manage_secret_format = false
           expiration           = null
