--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-s3instance.tf.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-s3instance.tf.j2
@@ -1,7 +1,12 @@
-module "s3buckets_instance" {
+module "s3buckets_instance_{{APP_NAME}}_bucket" {
   source = "{{ S3_SOURCE }}"
 
-  depends_on = [module.account_policy]
+  depends_on = [module.account_policy_{{APP_NAME}}_bucket]
+
+  providers = {
+    aws    = aws
+    aws.dr = aws.dr
+  }
 
   tags                    = var.common_tags
   name_prefix             = var.name_prefix
@@ -18,4 +23,6 @@ module "s3buckets_instance" {
   mas_instance_id         = local.cluster.instance.name
   secret_recovery_days    = 0
   s3_bucket_region        = local.location.region
+  allowed_bucket_policy_keys                  = var.allowed_bucket_policy_keys
+  allowed_bucket_lifecycle_configuration_keys = var.allowed_bucket_lifecycle_configuration_keys
 }
