--- a/tekton/src/pipelines/taskdefs/dependencies/mongo.yml.j2
+++ b/tekton/src/pipelines/taskdefs/dependencies/mongo.yml.j2
@@ -28,6 +28,9 @@
     - name: mongodb_action
       value: $(params.mongodb_action)
 
+    - name: override_mongodb_storageclass
+      value: $(params.override_mongodb_storageclass)
+
     - name: ibm_mongo_name
       value: $(params.ibm_mongo_name)
     - name: ibm_mongo_admin_password
