--- a/tekton/src/tasks/gitops/gitops-suite.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-suite.yml.j2
@@ -122,13 +122,13 @@ spec:
     - name: mas_wipe_mongo_data
       type: string
       default: "false"
-    - name: mas_feature_use
+    - name: mas_feature_usage
       type: string
       default: "true"
     - name: mas_deployment_progression
       type: string
       default: "true"
-    - name: mas_usability
+    - name: mas_usability_metrics
       type: string
       default: "true"
     - name: suite_spec_additional_properties_yaml
@@ -253,12 +253,12 @@ spec:
         value: $(params.mas_pod_template_yaml)
       - name: MAS_WIPE_MONGO_DATA
         value: $(params.mas_wipe_mongo_data)
-      - name: MAS_FEATURE_USE
-        value: $(params.mas_feature_use)
+      - name: MAS_FEATURE_USAGE
+        value: $(params.mas_feature_usage)
       - name: MAS_DEPLOYMENT_PROGRESSION
         value: $(params.mas_deployment_progression)
-      - name: MAS_USABILITY
-        value: $(params.mas_usability)
+      - name: MAS_USABILITY_METRICS
+        value: $(params.mas_usability_metrics)
       - name: SUITE_SPEC_ADDITIONAL_PROPERTIES_YAML
         value: $(params.suite_spec_additional_properties_yaml)
       - name: SUITE_SPEC_SETTINGS_ADDITIONAL_PROPERTIES_YAML
@@ -341,14 +341,14 @@ spec:
         if [[ -z "${DELETE_WILDCARDS}" ]]; then
           DELETE_WILDCARDS="false"
         fi
-        if [[ -z "${MAS_FEATURE_USE}" ]]; then
-          MAS_FEATURE_USE="false"
+        if [[ -z "${MAS_FEATURE_USAGE}" ]]; then
+          MAS_FEATURE_USAGE="false"
         fi
         if [[ -z "${MAS_DEPLOYMENT_PROGRESSION}" ]]; then
           MAS_DEPLOYMENT_PROGRESSION="false"
         fi
-        if [[ -z "${MAS_USABILITY}" ]]; then
-          MAS_USABILITY="false"
+        if [[ -z "${MAS_USABILITY_METRICS}" ]]; then
+          MAS_USABILITY_METRICS="false"
         fi
 
         sed -n -e 's/^.*api.fvtsaas.//p' | cut -d: -f1
