--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-suite.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-suite.yaml.j2
@@ -40,6 +40,12 @@ ibm_mas_suite:
 {% else %}
   mas_manual_cert_mgmt: false
 {% endif %}
+{%- if MAS_ROUTING_MODE is defined and MAS_ROUTING_MODE !='' %}
+  routing_mode: "{{ MAS_ROUTING_MODE }}"
+{%- endif %}
+{%- if MAS_INGRESS_CONTROLLER_NAME is defined and MAS_INGRESS_CONTROLLER_NAME !='' %}
+  ingress_controller_name: "{{ MAS_INGRESS_CONTROLLER_NAME }}"
+{%- endif %}
 {%- if MAS_ANNOTATIONS is defined and MAS_ANNOTATIONS !='' %}
   mas_annotations:
     {{ MAS_ANNOTATIONS | indent(4) }}
