--- a/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
@@ -254,6 +254,14 @@ spec:
     - name: sls_service
       type: string
       default: ""
+    
+    # routing parameters
+    - name: mas_routing_mode
+      type: string
+      default: ""
+    - name: mas_ingress_controller_name
+      type: string
+      default: ""
   tasks:
 
     # 0. Per-instance DB2U Operator
@@ -474,6 +482,10 @@ spec:
           value: $(params.extensions)
         - name: sls_service
           value: $(params.sls_service)
+        - name: mas_routing_mode
+          value: $(params.mas_routing_mode)
+        - name: mas_ingress_controller_name
+          value: $(params.mas_ingress_controller_name)
       taskRef:
         kind: Task
         name: gitops-suite
