--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/efs-csi-driver.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/efs-csi-driver.yaml.j2
@@ -4,4 +4,5 @@ efs_csi_driver:
   catalog_source: redhat-operators
   catalog_source_namespace: openshift-marketplace
   channel: stable
+  subscription_source_namespace: openshift-marketplace
   role_arn: {{ EFS_CSI_DRIVER_ROLE_ARN }}
