--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/configs/ibm-mas-jdbc-config.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/configs/ibm-mas-jdbc-config.yaml.j2
@@ -42,4 +42,6 @@ wsapp_suite_jdbccfg_labels:
 
 jdbc_ca_pem:
   crt: |
+    {% filter indent(width=4) -%}
     <path:{{ SECRETS_PATH }}:{{ SECRET_KEY_JDBC_CERTIFICATE_CONTENT }} | base64decode>
+    {%- endfilter %}
